# passfile

./: CMakeLists.txt  PKGBUILD  README.md  passfile.py  requirements.txt
debian/: postinst
