project(passfile)
cmake_minimum_required(VERSION 3.7)

set(INSTALLER_TMP_DIR ${CMAKE_CURRENT_BINARY_DIR}/installer_tmp)
file(MAKE_DIRECTORY ${INSTALLER_TMP_DIR})

SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_NAME "passfile")
SET(CPACK_PACKAGE_VERSION "1.7.1")
SET(CPACK_PACKAGE_VENDOR "Alfred Sawaya")
SET(CPACK_PACKAGE_CONTACT "alfred@huji.fr")
SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-noarch")

if( ${CMAKE_VERSION} VERSION_GREATER "3.7")
	SET(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
endif()

set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Passfile")
SET(CPACK_PACKAGE_DESCRIPTION_SHORT "Passfile")
SET(CPACK_DEBIAN_PACKAGE_SECTION "admin")
SET(CPACK_DEBIAN_PACKAGE_DEPENDS "coreutils, python3 (>=3.7), python3-pip, libxdo3, libx11-6, python3-pycryptodome, python3-yaml, python3-keyring")

file(GLOB DEBIAN_FILES ${CMAKE_CURRENT_SOURCE_DIR}/debian/*)
SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${DEBIAN_FILES})

#set(CPACK_FREEBSD_PACKAGE_LICENSE "GPLv3")
#set(CPACK_FREEBSD_PACKAGE_MAINTAINER "alfred@huji.fr")
#set(CPACK_FREEBSD_PACKAGE_DEPS "python3, py3-pip, xdotool, py3-keyring, py3-yaml, py3-chardet")

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/passfile.py
	DESTINATION /usr/local/bin/
	RENAME pass
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE WORLD_READ WORLD_EXECUTE)

INCLUDE(CPack)
